--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#96CC67"
-    android:backgroundTint="#AD7AB87D"
+    android:background="#EFE8E8"
+    android:backgroundTint="#ADC1C5C1"
     android:hapticFeedbackEnabled="false"
     tools:context=".MainActivity">
 
@@ -13,21 +13,25 @@
         android:id="@+id/weigth"
         android:layout_width="200dp"
         android:layout_height="80dp"
+        android:backgroundTint="#E53935"
         android:ems="10"
+        android:hint="@string/weight"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.135" />
 
     <EditText
         android:id="@+id/high"
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:layout_marginTop="56dp"
+        android:backgroundTint="#E53935"
         android:ems="10"
+        android:hint="@string/high"
         android:inputType="number"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/weigth"
@@ -37,10 +41,9 @@
 
     <TextView
         android:id="@+id/resultView"
-        android:layout_width="400dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="12dp"
+        android:layout_width="287dp"
+        android:layout_height="122dp"
+        android:layout_marginTop="72dp"
         android:gravity="center"
         android:padding="4dp"
         android:paddingStart="4dp"
@@ -51,56 +54,32 @@
         android:paddingBottom="4dp"
         android:text="0"
         android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="@+id/resultbutton"
-        app:layout_constraintTop_toBottomOf="@+id/resultbutton" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/boton"
+        app:layout_constraintStart_toStartOf="@+id/boton"
+        app:layout_constraintTop_toBottomOf="@+id/boton" />
 
     <Button
-        android:id="@+id/resultbutton"
-        android:layout_width="187dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="84dp"
-        android:background="#0E0E0E"
-        android:backgroundTint="#AF684F"
+        android:id="@+id/boton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="112dp"
+        android:background="#039BE5"
+        android:backgroundTint="#2756A6"
+        android:foregroundGravity="clip_horizontal"
         android:foregroundTint="#CA2424"
+        android:gravity="center_vertical"
+        android:hapticFeedbackEnabled="false"
         android:text="@string/result"
-        android:textSize="18sp"
+        android:textSize="26sp"
         android:textStyle="bold|italic"
+        android:visibility="visible"
         app:iconTint="#151212"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/high"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/high"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:rippleColor="#813232"
+        app:layout_constraintStart_toStartOf="@+id/high"
+        app:layout_constraintTop_toBottomOf="@+id/high"
         app:strokeColor="#E13E3E" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="190dp"
-        android:layout_height="80dp"
-        android:text="@string/weight"
-        android:textAlignment="center"
-        android:textColor="#070606"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/weigth"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/weigth"
-        app:layout_constraintTop_toTopOf="@+id/weigth"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="190dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="56dp"
-        android:text="@string/high"
-        android:textAlignment="center"
-        android:textColor="#070606"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/high"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
