--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,82 +4,97 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFE8E8"
-    android:backgroundTint="#ADC1C5C1"
+    android:background="@drawable/imcbackground"
     android:hapticFeedbackEnabled="false"
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/weigth"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:backgroundTint="#E53935"
-        android:ems="10"
+        android:layout_width="@dimen/inputWidth"
+        android:layout_height="@dimen/inputHeight"
+        android:autofillHints="@string/weight"
+        android:backgroundTint="@color/lineColor"
         android:hint="@string/weight"
         android:inputType="numberDecimal"
+        android:textSize="@dimen/inputTextSize"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.921"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.135" />
+        app:layout_constraintVertical_bias="0.292" />
 
     <EditText
         android:id="@+id/high"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="56dp"
-        android:backgroundTint="#E53935"
-        android:ems="10"
+        android:layout_width="@dimen/inputWidth"
+        android:layout_height="@dimen/inputHeight"
+        android:autofillHints="@string/high"
+        android:backgroundTint="@color/lineColor"
         android:hint="@string/high"
         android:inputType="number"
-        android:textSize="14sp"
+        android:textSize="@dimen/inputTextSize"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/weigth"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/weigth"
         app:layout_constraintTop_toBottomOf="@+id/weigth" />
 
     <TextView
         android:id="@+id/resultView"
-        android:layout_width="287dp"
-        android:layout_height="122dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/textViewHeight"
+        android:layout_marginBottom="@dimen/infMargeTextView"
         android:gravity="center"
-        android:padding="4dp"
-        android:paddingStart="4dp"
-        android:paddingLeft="4dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="4dp"
-        android:paddingRight="4dp"
-        android:paddingBottom="4dp"
-        android:text="0"
-        android:textSize="36sp"
+        android:text="@string/app_name"
+        android:textSize="@dimen/textViewTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/boton"
-        app:layout_constraintStart_toStartOf="@+id/boton"
-        app:layout_constraintTop_toBottomOf="@+id/boton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/boton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="112dp"
-        android:background="#039BE5"
-        android:backgroundTint="#2756A6"
-        android:foregroundGravity="clip_horizontal"
-        android:foregroundTint="#CA2424"
-        android:gravity="center_vertical"
-        android:hapticFeedbackEnabled="false"
+        android:layout_marginTop="148dp"
+        android:background="@drawable/rectangulo"
+        android:gravity="center"
         android:text="@string/result"
-        android:textSize="26sp"
+        android:textSize="@dimen/resultButtonTextSize"
         android:textStyle="bold|italic"
-        android:visibility="visible"
-        app:iconTint="#151212"
-        app:layout_constraintEnd_toEndOf="@+id/high"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/high"
+        app:layout_constraintBottom_toTopOf="@+id/resultView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/high"
-        app:strokeColor="#E13E3E" />
+        app:layout_constraintVertical_bias="0.538"
+        app:strokeColor="@color/black" />
+
+    <Button
+        android:id="@+id/restar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ovalo"
+        android:text="@string/restar"
+        android:textColor="@color/white"
+        android:textSize="@dimen/ovalTextSize"
+        app:layout_constraintBottom_toTopOf="@+id/weigth"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.378" />
+
+    <TextView
+        android:id="@+id/creditosView"
+        android:layout_width="@dimen/creditosWidth"
+        android:layout_height="@dimen/creditosHeight"
+        android:cursorVisible="true"
+        android:text="@string/creditos"
+        android:textColor="@color/white"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
