--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,9 @@
         android:backgroundTint="@color/lineColor"
         android:hint="@string/weight"
         android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="@dimen/inputTextSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,6 +36,9 @@
         android:backgroundTint="@color/lineColor"
         android:hint="@string/high"
         android:inputType="number"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="@dimen/inputTextSize"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/weigth"
@@ -42,12 +48,15 @@
 
     <TextView
         android:id="@+id/resultView"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/textViewHeight"
+        android:layout_width="408dp"
+        android:layout_height="177dp"
         android:layout_marginBottom="@dimen/infMargeTextView"
         android:gravity="center"
         android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="@dimen/textViewTextSize"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +77,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/high"
-        app:layout_constraintVertical_bias="0.538"
+        app:layout_constraintVertical_bias="1.0"
         app:strokeColor="@color/black" />
 
     <Button
@@ -88,7 +97,6 @@
         android:id="@+id/creditosView"
         android:layout_width="@dimen/creditosWidth"
         android:layout_height="@dimen/creditosHeight"
-        android:cursorVisible="true"
         android:text="@string/creditos"
         android:textColor="@color/white"
         android:visibility="visible"
