--- a/app/src/main/res/drawable/ovalo.xml
+++ b/app/src/main/res/drawable/ovalo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle"
+  android:tint="@color/btncolor"
 
     >
     <size
@@ -12,8 +13,8 @@
         >
     </corners>
     <stroke
-        android:width="12dp"
-        android:color="@color/black"
+        android:width="@dimen/strokeSize"
+        android:color="@color/btncolor"
         >
     </stroke>
 
