--- a/app/src/main/res/drawable/rectangulo.xml
+++ b/app/src/main/res/drawable/rectangulo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle"
+android:tint="@color/btncolor"
  >
     <size
         android:width="@dimen/rectangularWidth"
@@ -15,10 +16,9 @@ android:shape="rectangle"
 
     </corners>
     <stroke
-        android:width="12dp"
-        android:color="@color/black"
+        android:width="@dimen/strokeSize"
+        android:color="@color/btncolor"
         >
+
     </stroke>
-
-
 </shape>
