--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,10 +67,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="148dp"
-        android:background="@drawable/rectangulo"
         android:backgroundTint="@color/btncolor"
         android:gravity="center"
         android:text="@string/result"
+        android:textColor="@color/white"
         android:textSize="@dimen/resultButtonTextSize"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/resultView"
@@ -90,6 +90,7 @@
         android:text="@string/restar"
         android:textColor="@color/white"
         android:textSize="@dimen/ovalTextSize"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/weigth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
