--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/strokeColor"
-        android:ems="10"
         android:gravity="center"
         android:hint="@string/nameText"
         android:inputType="textPersonName"
@@ -31,9 +30,10 @@
         android:id="@+id/btnCalcular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnCalcular"
-        android:textSize="@dimen/calcularTextSize"
         android:backgroundTint="@color/btncolor"
+        android:text="@string/btnCalcular"
+        android:textColor="@color/white"
+        android:textSize="@dimen/calcularTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/TextPersonName"
         app:layout_constraintStart_toStartOf="@+id/TextPersonName"
