--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,12 +72,12 @@
         android:text="@string/result"
         android:textColor="@color/white"
         android:textSize="@dimen/resultButtonTextSize"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/resultView"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/resultView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/high"
+        app:layout_constraintTop_toBottomOf="@id/high"
         app:layout_constraintVertical_bias="1.0"
         app:strokeColor="@color/black" />
 
