--- a/app/src/main/res/layout/activity_blood_presure.xml
+++ b/app/src/main/res/layout/activity_blood_presure.xml
@@ -72,9 +72,10 @@
         app:layout_constraintTop_toBottomOf="@id/systole" />
 
     <Button
-        android:id="@+id/resultBp"
+        android:id="@+id/btnResultBp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rectangulo"
         android:backgroundTint="@color/btncolor"
         android:gravity="center"
         android:text="@string/result"
