--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="148dp"
+        android:background="@drawable/rectangulo"
         android:backgroundTint="@color/btncolor"
         android:gravity="center"
         android:text="@string/result"
